--- a/2013Weather.ipynb
+++ b/2013Weather.ipynb
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "dDpKN2POGePj",
         "colab_type": "code",
-        "outputId": "d9cfeda1-057f-41fa-a22e-6c40958f9f40",
+        "outputId": "97ef0ef6-4093-4016-a361-d0b95903069d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 33
@@ -60,7 +60,7 @@
         "weather_data = pd.read_csv(Weather_url)\n",
         "weather_data.shape"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -72,7 +72,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "SoTomj0BGu5C",
         "colab_type": "code",
-        "outputId": "8ba6cd84-5b49-426c-ebbd-181eea215c2f",
+        "outputId": "6b4524a4-aed7-4aa6-ee8e-e12d89a8ecdb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 438
@@ -90,7 +90,7 @@
       "source": [
         "weather_data.tail()"
       ],
-      "execution_count": 43,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -498,7 +498,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 4
         }
       ]
     },
@@ -511,13 +511,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 391
         },
-        "outputId": "1ce4adb0-cadd-4f77-80f5-94bbd92323b8"
+        "outputId": "0c8a864a-5e1c-4272-81f1-7f5c199538bc"
       },
       "source": [
         "dfweather_data = weather_data[['STATE','DAMAGE_PROPERTY']].copy()\n",
         "dfweather_data"
       ],
-      "execution_count": 44,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,7 +626,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 5
         }
       ]
     },
@@ -671,12 +671,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 66
         },
-        "outputId": "270c56a5-abe2-45aa-c25e-205b145452dc"
+        "outputId": "3353acf9-0304-4d1a-880d-bad4e11e235a"
       },
       "source": [
         "dfweather_data.dtypes"
       ],
-      "execution_count": 46,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -690,7 +690,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 6
         }
       ]
     },
@@ -717,12 +717,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 66
         },
-        "outputId": "a639d268-2513-4ad9-b672-0a39475a0c26"
+        "outputId": "c1facf10-a38f-45fd-8d32-c4bc62801311"
       },
       "source": [
         "dfweather_data.isnull().sum().sort_values()"
       ],
-      "execution_count": 48,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +736,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 48
+          "execution_count": 8
         }
       ]
     },
@@ -868,15 +868,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 191
         },
-        "outputId": "4ae120d1-928b-4589-8297-25dca3307cb9"
+        "outputId": "31f733ce-c383-4232-9deb-17737aaac43a"
       },
       "source": [
-        "dfweather_data.loc[lambda dfweather_data: dfweather_data['DAMAGE_PROPERTY'] == \"B\"]\n",
         "dfweather_data.head()\n",
         "\n",
         "#look at https://stackoverflow.com/questions/39684548/convert-the-string-2-90k-to-2900-or-5-2m-to-5200000-in-pandas-dataframe"
       ],
-      "execution_count": 71,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -902,7 +901,6 @@
               "      <th></th>\n",
               "      <th>STATE</th>\n",
               "      <th>DAMAGE_PROPERTY</th>\n",
-              "      <th>DAMAGE_PROPERTY_K</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -910,99 +908,62 @@
               "      <th>1</th>\n",
               "      <td>COLORADO</td>\n",
               "      <td>0.00K</td>\n",
-              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>CALIFORNIA</td>\n",
               "      <td>0.00K</td>\n",
-              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>WYOMING</td>\n",
               "      <td>0.00K</td>\n",
-              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>SOUTH DAKOTA</td>\n",
               "      <td>0.00K</td>\n",
-              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
               "      <td>COLORADO</td>\n",
               "      <td>0.00K</td>\n",
-              "      <td>0.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "          STATE DAMAGE_PROPERTY  DAMAGE_PROPERTY_K\n",
-              "1      COLORADO           0.00K                0.0\n",
-              "2    CALIFORNIA           0.00K                0.0\n",
-              "3       WYOMING           0.00K                0.0\n",
-              "4  SOUTH DAKOTA           0.00K                0.0\n",
-              "5      COLORADO           0.00K                0.0"
+              "          STATE DAMAGE_PROPERTY\n",
+              "1      COLORADO           0.00K\n",
+              "2    CALIFORNIA           0.00K\n",
+              "3       WYOMING           0.00K\n",
+              "4  SOUTH DAKOTA           0.00K\n",
+              "5      COLORADO           0.00K"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 71
+          "execution_count": 10
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "W7bbx-4S8c-b",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "#def object_to_float(cell_contents):\n",
-        "  if cell_contents == 'K':\n",
-        "    print(\"Thousand\")\n",
-        "  elif cell_contents == \"B\":\n",
-        "    print(\"Billion\")\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1BTOH3k75XZ8",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "#def object_to_float(cell_contents):\n",
-        "  #return float(cell_contents.strip('M').strip('B').strip('K'))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vRnlCn2R63Ya",
+        "id": "JLU0yOudezrJ",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 115
         },
-        "outputId": "13e49fd3-107b-4682-9dbb-d749deb4273b"
+        "outputId": "42c63ae8-43d9-4ec1-85b4-edff41189d42"
       },
       "source": [
-        "dfweather_data['DAMAGE_PROPERTY_K'] = dfweather_data['DAMAGE_PROPERTY'].apply(object_to_float)\n",
-        "#dfweather_data.head()"
+        "dfweather_data['DAMAGE_PROPERTY'] = dfweather_data['DAMAGE_PROPERTY'].replace({'K': '*1e3', 'M': '*1e6', 'B': '1e9'}, regex=True).map(pd.eval)"
       ],
-      "execution_count": 53,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1015,6 +976,94 @@
             "  \"\"\"Entry point for launching an IPython kernel.\n"
           ],
           "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N8xBemLEfhTc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 191
+        },
+        "outputId": "a87cbc1a-2346-4e6e-a168-7d2df6f79939"
+      },
+      "source": [
+        "dfweather_data.head()"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>STATE</th>\n",
+              "      <th>DAMAGE_PROPERTY</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>COLORADO</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>CALIFORNIA</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>WYOMING</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>SOUTH DAKOTA</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>COLORADO</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "          STATE  DAMAGE_PROPERTY\n",
+              "1      COLORADO              0.0\n",
+              "2    CALIFORNIA              0.0\n",
+              "3       WYOMING              0.0\n",
+              "4  SOUTH DAKOTA              0.0\n",
+              "5      COLORADO              0.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
         }
       ]
     }
