--- a/2013Weather.ipynb
+++ b/2013Weather.ipynb
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "dDpKN2POGePj",
         "colab_type": "code",
-        "outputId": "97ef0ef6-4093-4016-a361-d0b95903069d",
+        "outputId": "2f1875ad-e630-4c56-9cb3-bb79b1628472",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 33
@@ -60,7 +60,7 @@
         "weather_data = pd.read_csv(Weather_url)\n",
         "weather_data.shape"
       ],
-      "execution_count": 3,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -72,7 +72,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 44
         }
       ]
     },
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "SoTomj0BGu5C",
         "colab_type": "code",
-        "outputId": "6b4524a4-aed7-4aa6-ee8e-e12d89a8ecdb",
+        "outputId": "6fd592bc-ec59-40c7-845e-2705cce6c31c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 438
@@ -90,7 +90,7 @@
       "source": [
         "weather_data.tail()"
       ],
-      "execution_count": 4,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -498,7 +498,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 46
         }
       ]
     },
@@ -511,13 +511,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 391
         },
-        "outputId": "0c8a864a-5e1c-4272-81f1-7f5c199538bc"
+        "outputId": "1985e55e-a0a8-431e-e261-f09e1bdb3a52"
       },
       "source": [
         "dfweather_data = weather_data[['STATE','DAMAGE_PROPERTY']].copy()\n",
         "dfweather_data"
       ],
-      "execution_count": 5,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,7 +626,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 47
         }
       ]
     },
@@ -639,12 +639,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 66
         },
-        "outputId": "08d7971a-dd5b-4a93-b02b-16da2d331f16"
+        "outputId": "e6087211-9629-4f85-bc95-bcd9916a4319"
       },
       "source": [
         "dfweather_data.isnull().sum().sort_values()"
       ],
-      "execution_count": 45,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -658,7 +658,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 48
         }
       ]
     },
@@ -671,12 +671,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 66
         },
-        "outputId": "3353acf9-0304-4d1a-880d-bad4e11e235a"
+        "outputId": "d6c6a653-8aff-44bd-a0c1-d20dfa231d52"
       },
       "source": [
         "dfweather_data.dtypes"
       ],
-      "execution_count": 6,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -690,7 +690,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 49
         }
       ]
     },
@@ -703,7 +703,8 @@
       },
       "source": [
         "#dropping NaN values\n",
-        "dfweather_data = dfweather_data.dropna()"
+        "dfweather_data = dfweather_data.dropna()\n",
+        "weather_data = dfweather_data.dropna()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -717,12 +718,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 66
         },
-        "outputId": "c1facf10-a38f-45fd-8d32-c4bc62801311"
+        "outputId": "c0b137eb-a8b3-47ba-e176-01c3944e62ff"
       },
       "source": [
         "dfweather_data.isnull().sum().sort_values()"
       ],
-      "execution_count": 8,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +737,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 51
         }
       ]
     },
@@ -749,13 +750,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 335
         },
-        "outputId": "e1ba2a34-9fb2-4f6c-d5e5-22576e521b40"
+        "outputId": "4f81ff96-2f7f-4d0e-9eca-e051f225105f"
       },
       "source": [
         "dfweather_data.sort_values(by='DAMAGE_PROPERTY', ascending= False)\n",
         "dfweather_data.head(10)"
       ],
-      "execution_count": 51,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -855,7 +856,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 51
+          "execution_count": 52
         }
       ]
     },
@@ -868,14 +869,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 191
         },
-        "outputId": "31f733ce-c383-4232-9deb-17737aaac43a"
+        "outputId": "eecf8966-d428-45fe-f58a-064beec93cdf"
       },
       "source": [
         "dfweather_data.head()\n",
         "\n",
         "#look at https://stackoverflow.com/questions/39684548/convert-the-string-2-90k-to-2900-or-5-2m-to-5200000-in-pandas-dataframe"
       ],
-      "execution_count": 10,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -945,7 +946,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 53
         }
       ]
     },
@@ -954,116 +955,56 @@
       "metadata": {
         "id": "JLU0yOudezrJ",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 115
-        },
-        "outputId": "42c63ae8-43d9-4ec1-85b4-edff41189d42"
+        "colab": {}
       },
       "source": [
-        "dfweather_data['DAMAGE_PROPERTY'] = dfweather_data['DAMAGE_PROPERTY'].replace({'K': '*1e3', 'M': '*1e6', 'B': '1e9'}, regex=True).map(pd.eval)"
+        "DAMAGE_PROPERTY_NEW = weather_data['DAMAGE_PROPERTY'].replace({'K': '*1e3', 'M': '*1e6', 'B': '1e9'}, regex=True).map(pd.eval)"
       ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \"\"\"Entry point for launching an IPython kernel.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "N8xBemLEfhTc",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 191
-        },
-        "outputId": "a87cbc1a-2346-4e6e-a168-7d2df6f79939"
+        "colab": {}
       },
       "source": [
-        "dfweather_data.head()"
+        "weather_data['DAMAGE_PROPERTY'] = DAMAGE_PROPERTY_NEW"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZZdc1kuXlcjs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 66
+        },
+        "outputId": "26a30e34-e8e6-4a9c-b241-07b05c7baa04"
+      },
+      "source": [
+        "weather_data.dtypes"
+      ],
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>STATE</th>\n",
-              "      <th>DAMAGE_PROPERTY</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>COLORADO</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>CALIFORNIA</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>WYOMING</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>SOUTH DAKOTA</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>COLORADO</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
             "text/plain": [
-              "          STATE  DAMAGE_PROPERTY\n",
-              "1      COLORADO              0.0\n",
-              "2    CALIFORNIA              0.0\n",
-              "3       WYOMING              0.0\n",
-              "4  SOUTH DAKOTA              0.0\n",
-              "5      COLORADO              0.0"
+              "STATE               object\n",
+              "DAMAGE_PROPERTY    float64\n",
+              "dtype: object"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 59
         }
       ]
     }
