--- a/2013_2019weather.ipynb
+++ b/2013_2019weather.ipynb
@@ -3533,31 +3533,14 @@
       "metadata": {
         "id": "yc5ckw4_Jzzp",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "c0fe6fdf-27c7-4730-9fca-30984525116f"
+        "colab": {}
       },
       "source": [
         "Texas2018 = dfweather_data_2018[dfweather_data_2018['STATE'].str.match('TEXAS')]\n",
-        "Texas2018['DAMAGE_PROPERTY'].sum()"
+        "damageTotalTexas = Texas2018['DAMAGE_PROPERTY'].sum()"
       ],
-      "execution_count": 140,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "338081250"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 140
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -3595,31 +3578,14 @@
       "metadata": {
         "id": "Ks82afeZJUK4",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "3621cf7f-09e0-4df2-a3ce-e58140b0005b"
+        "colab": {}
       },
       "source": [
         "Alabama2018 = dfweather_data_2018[dfweather_data_2018['STATE'].str.match('ALABAMA')]\n",
-        "Alabama2018['DAMAGE_PROPERTY'].sum()"
+        "damageTotalAlabama = Alabama2018['DAMAGE_PROPERTY'].sum()"
       ],
-      "execution_count": 142,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "8340450"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 142
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -3657,29 +3623,91 @@
       "metadata": {
         "id": "csVWC1DIMkkJ",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "d2b5aab3-cbfa-4b71-8a21-4e2dd82d4a0b"
+        "colab": {}
       },
       "source": [
         "VERMONT2018 = dfweather_data_2018[dfweather_data_2018['STATE'].str.match('VERMONT')]\n",
-        "VERMONT2018['DAMAGE_PROPERTY'].sum()"
+        "damageTotalVermont = VERMONT2018['DAMAGE_PROPERTY'].sum()"
       ],
-      "execution_count": 143,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dW8EG-LlvpAc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 142
+        },
+        "outputId": "e884bed0-1270-40eb-96ab-bbb01242a0d9"
+      },
+      "source": [
+        "#adding results into a dataframe\n",
+        "new2018df = {'State':['Vermont', 'Alabama', 'Texas'], 'Damage(USD)':[damageTotalVermont, damageTotalAlabama, damageTotalTexas]}\n",
+        "df = pd.DataFrame(new2018df)\n",
+        "df"
+      ],
+      "execution_count": 207,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>State</th>\n",
+              "      <th>Damage(USD)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Vermont</td>\n",
+              "      <td>5054000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Alabama</td>\n",
+              "      <td>8340450</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Texas</td>\n",
+              "      <td>338081250</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
             "text/plain": [
-              "5054000"
+              "     State  Damage(USD)\n",
+              "0  Vermont      5054000\n",
+              "1  Alabama      8340450\n",
+              "2    Texas    338081250"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 143
+          "execution_count": 207
         }
       ]
     },
