--- a/2013_2019weather.ipynb
+++ b/2013_2019weather.ipynb
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "bPmmBIoUf0sz",
         "colab_type": "code",
-        "outputId": "c11e4cf8-d5b7-4420-cf9d-069aa8688bb9",
+        "outputId": "5e8d2366-bf95-4829-d983-f68c05d688c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -91,7 +91,7 @@
         "weather_data_2013 = pd.read_csv(Weather_url_2013)\n",
         "weather_data_2013.shape"
       ],
-      "execution_count": 91,
+      "execution_count": 211,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -103,7 +103,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 91
+          "execution_count": 211
         }
       ]
     },
@@ -112,7 +112,7 @@
       "metadata": {
         "id": "gU0mRz5Df4kq",
         "colab_type": "code",
-        "outputId": "196eab7b-d077-4c63-9e08-e6b67a13941b",
+        "outputId": "2b249492-9cd3-4c9c-a3b1-6b94d1144ec4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
@@ -121,7 +121,7 @@
       "source": [
         "weather_data_2013.head()"
       ],
-      "execution_count": 92,
+      "execution_count": 212,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -487,7 +487,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 92
+          "execution_count": 212
         }
       ]
     },
@@ -548,6 +548,184 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "UcJeudFa07F5",
+        "colab_type": "text"
+      },
+      "source": [
+        "**State data totals**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x16gmJhm4IuP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e3d60046-94a2-4818-a64d-9ce33ac2bee8"
+      },
+      "source": [
+        "Alabama2013 = dfweather_data_2013[dfweather_data_2013['STATE'].str.match('ALABAMA')]\n",
+        "damageTotalAlabama = Alabama2013['DAMAGE_PROPERTY'].sum()\n",
+        "damageTotalAlabama"
+      ],
+      "execution_count": 222,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8394450.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 222
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XiiND6Ab4Ve8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Alaska2013 = dfweather_data_2013[dfweather_data_2013['STATE'].str.match('ALASKA')]\n",
+        "damageTotalAlaska = Alaska2013['DAMAGE_PROPERTY'].sum()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v60HBiqD4ka5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Arizona2013 = dfweather_data_2013[dfweather_data_2013['STATE'].str.match('ARIZONA')]\n",
+        "damageTotalArizona = Arizona2013['DAMAGE_PROPERTY'].sum()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fRKaKzzK45Rw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Arkansas2013 = dfweather_data_2013[dfweather_data_2013['STATE'].str.match('ARKANSAS')]\n",
+        "damageTotalArkansas = Arkansas2013['DAMAGE_PROPERTY'].sum()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lmnxZkpW1CBY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Texas2013 = dfweather_data_2013[dfweather_data_2013['STATE'].str.match('TEXAS')]\n",
+        "damageTotalTexas = Texas2013['DAMAGE_PROPERTY'].sum()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uz6Z-41F1Oso",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 142
+        },
+        "outputId": "c9fa02c3-40b8-40f6-fe6b-474d060661f6"
+      },
+      "source": [
+        "#adding results into a dataframe\n",
+        "new2013df = {'State':['Alabama','Alaska','Arizona','Arkansas','California','Colorado','Connecticut','Delaware','Florida','Georgia','Texas'], \n",
+        "             'Damage(USD)':[damageTotalAlabama, damageTotalAlaska, damageTotalArizona, damageTotalArkansas]}\n",
+        "df = pd.DataFrame(new2018df)\n",
+        "df"
+      ],
+      "execution_count": 221,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>State</th>\n",
+              "      <th>Damage(USD)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Vermont</td>\n",
+              "      <td>5054000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Alabama</td>\n",
+              "      <td>8340450</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Texas</td>\n",
+              "      <td>338081250</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     State  Damage(USD)\n",
+              "0  Vermont      5054000\n",
+              "1  Alabama      8340450\n",
+              "2    Texas    338081250"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 221
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "fj8TX9sifd8D",
         "colab_type": "text"
       },
@@ -584,7 +762,7 @@
         "weather_data_2014 = pd.read_csv(Weather_url_2014)\n",
         "weather_data_2014.shape"
       ],
-      "execution_count": 98,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -614,7 +792,7 @@
       "source": [
         "weather_data_2014.head()"
       ],
-      "execution_count": 99,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1076,7 +1254,7 @@
         "weather_data_2015 = pd.read_csv(Weather_url_2015)\n",
         "weather_data_2015.shape"
       ],
-      "execution_count": 105,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1106,7 +1284,7 @@
       "source": [
         "weather_data_2015.head()"
       ],
-      "execution_count": 106,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1568,7 +1746,7 @@
         "weather_data_2016 = pd.read_csv(Weather_url_2016)\n",
         "weather_data_2016.shape"
       ],
-      "execution_count": 112,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1598,7 +1776,7 @@
       "source": [
         "weather_data_2016.head()"
       ],
-      "execution_count": 113,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2060,7 +2238,7 @@
         "weather_data_2017 = pd.read_csv(Weather_url_2017)\n",
         "weather_data_2017.shape"
       ],
-      "execution_count": 119,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2090,7 +2268,7 @@
       "source": [
         "weather_data_2017.head()"
       ],
-      "execution_count": 120,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2552,7 +2730,7 @@
         "weather_data_2018 = pd.read_csv(Weather_url_2018)\n",
         "weather_data_2018.shape"
       ],
-      "execution_count": 191,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2582,7 +2760,7 @@
       "source": [
         "weather_data_2018.head()"
       ],
-      "execution_count": 192,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3044,7 +3222,7 @@
         "weather_data_2019 = pd.read_csv(Weather_url_2019)\n",
         "weather_data_2019.shape"
       ],
-      "execution_count": 133,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3074,7 +3252,7 @@
       "source": [
         "weather_data_2019.head()"
       ],
-      "execution_count": 134,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3502,17 +3680,17 @@
       "metadata": {
         "id": "YIjetN5dEFN9",
         "colab_type": "code",
+        "outputId": "5572f928-ab08-49c7-a32b-9c5b65eed9f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5572f928-ab08-49c7-a32b-9c5b65eed9f5"
+        }
       },
       "source": [
         "Texas2019 = dfweather_data_2019[dfweather_data_2019['STATE'].str.match('TEXAS')]\n",
         "Texas2019['DAMAGE_PROPERTY'].sum()"
       ],
-      "execution_count": 139,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3547,17 +3725,17 @@
       "metadata": {
         "id": "ssJzjqEfG9T2",
         "colab_type": "code",
+        "outputId": "cb49c879-e8a7-4cf4-fb40-46360e11467b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cb49c879-e8a7-4cf4-fb40-46360e11467b"
+        }
       },
       "source": [
         "Alabama2019 = dfweather_data_2019[dfweather_data_2019['STATE'].str.match('ALABAMA')]\n",
         "Alabama2019['DAMAGE_PROPERTY'].sum()"
       ],
-      "execution_count": 141,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3592,17 +3770,17 @@
       "metadata": {
         "id": "W1wjxeF3q-AY",
         "colab_type": "code",
+        "outputId": "44541e27-9d63-458d-9df6-0ff71c97e844",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "44541e27-9d63-458d-9df6-0ff71c97e844"
+        }
       },
       "source": [
         "VERMONT2019 = dfweather_data_2019[dfweather_data_2019['STATE'].str.match('VERMONT')]\n",
         "VERMONT2019['DAMAGE_PROPERTY'].sum()"
       ],
-      "execution_count": 199,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3637,11 +3815,11 @@
       "metadata": {
         "id": "dW8EG-LlvpAc",
         "colab_type": "code",
+        "outputId": "e884bed0-1270-40eb-96ab-bbb01242a0d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 142
-        },
-        "outputId": "e884bed0-1270-40eb-96ab-bbb01242a0d9"
+        }
       },
       "source": [
         "#adding results into a dataframe\n",
@@ -3649,7 +3827,7 @@
         "df = pd.DataFrame(new2018df)\n",
         "df"
       ],
-      "execution_count": 207,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3739,18 +3917,18 @@
       "metadata": {
         "id": "yG8lXMw_jhEv",
         "colab_type": "code",
+        "outputId": "b702dc24-3e09-4f52-d386-3fe11876d45d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 340
-        },
-        "outputId": "b702dc24-3e09-4f52-d386-3fe11876d45d"
+        }
       },
       "source": [
         "StateData = dfweather_data_2018['STATE']\n",
         "DamageData = dfweather_data_2018['DAMAGE_PROPERTY']\n",
         "sort_states(StateData, DamageData)"
       ],
-      "execution_count": 198,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -3772,17 +3950,17 @@
       "metadata": {
         "id": "AUjHYnrrCvsZ",
         "colab_type": "code",
+        "outputId": "22104818-6a89-4323-898b-fac280710556",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 669
-        },
-        "outputId": "22104818-6a89-4323-898b-fac280710556"
+        }
       },
       "source": [
         "dfweather_data_2019.sort_values('STATE',ascending=True)\n",
         "dfweather_data_2019.head(20)"
       ],
-      "execution_count": 144,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3960,7 +4138,7 @@
       "source": [
         "dfweather_data_2019.sort_values('DAMAGE_PROPERTY',ascending=False)"
       ],
-      "execution_count": 54,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
