--- a/2013_2019weather.ipynb
+++ b/2013_2019weather.ipynb
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "bPmmBIoUf0sz",
         "colab_type": "code",
-        "outputId": "5e8d2366-bf95-4829-d983-f68c05d688c6",
+        "outputId": "9f3dd975-6852-458b-810a-761d21945923",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -91,7 +91,7 @@
         "weather_data_2013 = pd.read_csv(Weather_url_2013)\n",
         "weather_data_2013.shape"
       ],
-      "execution_count": 211,
+      "execution_count": 229,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -103,7 +103,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 211
+          "execution_count": 229
         }
       ]
     },
@@ -112,7 +112,7 @@
       "metadata": {
         "id": "gU0mRz5Df4kq",
         "colab_type": "code",
-        "outputId": "2b249492-9cd3-4c9c-a3b1-6b94d1144ec4",
+        "outputId": "f266bfc9-f262-41fc-d492-9c0d1062b8af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
@@ -121,7 +121,7 @@
       "source": [
         "weather_data_2013.head()"
       ],
-      "execution_count": 212,
+      "execution_count": 230,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -487,7 +487,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 212
+          "execution_count": 230
         }
       ]
     },
@@ -546,6 +546,127 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "km1hN_SbBDmw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 450
+        },
+        "outputId": "8378b17b-c18c-4a8b-d57d-139fc3b6b82f"
+      },
+      "source": [
+        "#adds together the state totals\n",
+        "dfweather_data_2013.groupby(['STATE']).sum()"
+      ],
+      "execution_count": 236,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>DAMAGE_PROPERTY</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>STATE</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>ALABAMA</th>\n",
+              "      <td>8394450.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ALASKA</th>\n",
+              "      <td>30415600.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>AMERICAN SAMOA</th>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ARIZONA</th>\n",
+              "      <td>154201200.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ARKANSAS</th>\n",
+              "      <td>72299100.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>VIRGINIA</th>\n",
+              "      <td>7510250.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>WASHINGTON</th>\n",
+              "      <td>12839030.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>WEST VIRGINIA</th>\n",
+              "      <td>9586250.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>WISCONSIN</th>\n",
+              "      <td>47620600.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>WYOMING</th>\n",
+              "      <td>18609000.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>65 rows × 1 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                DAMAGE_PROPERTY\n",
+              "STATE                          \n",
+              "ALABAMA               8394450.0\n",
+              "ALASKA               30415600.0\n",
+              "AMERICAN SAMOA              0.0\n",
+              "ARIZONA             154201200.0\n",
+              "ARKANSAS             72299100.0\n",
+              "...                         ...\n",
+              "VIRGINIA              7510250.0\n",
+              "WASHINGTON           12839030.0\n",
+              "WEST VIRGINIA         9586250.0\n",
+              "WISCONSIN            47620600.0\n",
+              "WYOMING              18609000.0\n",
+              "\n",
+              "[65 rows x 1 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 236
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "UcJeudFa07F5",
@@ -560,18 +681,18 @@
       "metadata": {
         "id": "x16gmJhm4IuP",
         "colab_type": "code",
+        "outputId": "e3d60046-94a2-4818-a64d-9ce33ac2bee8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e3d60046-94a2-4818-a64d-9ce33ac2bee8"
+        }
       },
       "source": [
         "Alabama2013 = dfweather_data_2013[dfweather_data_2013['STATE'].str.match('ALABAMA')]\n",
         "damageTotalAlabama = Alabama2013['DAMAGE_PROPERTY'].sum()\n",
         "damageTotalAlabama"
       ],
-      "execution_count": 222,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -648,11 +769,11 @@
       "metadata": {
         "id": "uz6Z-41F1Oso",
         "colab_type": "code",
+        "outputId": "c9fa02c3-40b8-40f6-fe6b-474d060661f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 142
-        },
-        "outputId": "c9fa02c3-40b8-40f6-fe6b-474d060661f6"
+        }
       },
       "source": [
         "#adding results into a dataframe\n",
@@ -661,7 +782,7 @@
         "df = pd.DataFrame(new2018df)\n",
         "df"
       ],
-      "execution_count": 221,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
