--- a/2013_2019weather.ipynb
+++ b/2013_2019weather.ipynb
@@ -550,17 +550,31 @@
       "metadata": {
         "id": "km1hN_SbBDmw",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 450
-        },
-        "outputId": "8378b17b-c18c-4a8b-d57d-139fc3b6b82f"
+        "colab": {}
       },
       "source": [
         "#adds together the state totals\n",
-        "dfweather_data_2013.groupby(['STATE']).sum()"
+        "newdf2013 = dfweather_data_2013.groupby(['STATE'], as_index=False).sum()\n"
       ],
-      "execution_count": 236,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-STf-NPSDEx7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "dab29396-1968-4434-eb79-0b7a7ad2c8a5"
+      },
+      "source": [
+        "df2013 = pd.DataFrame(newdf2013)\n",
+        "df2013.head()"
+      ],
+      "execution_count": 248,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,85 +598,53 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>DAMAGE_PROPERTY</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
               "      <th>STATE</th>\n",
-              "      <th></th>\n",
+              "      <th>DAMAGE_PROPERTY</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>ALABAMA</th>\n",
+              "      <th>0</th>\n",
+              "      <td>ALABAMA</td>\n",
               "      <td>8394450.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>ALASKA</th>\n",
+              "      <th>1</th>\n",
+              "      <td>ALASKA</td>\n",
               "      <td>30415600.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>AMERICAN SAMOA</th>\n",
+              "      <th>2</th>\n",
+              "      <td>AMERICAN SAMOA</td>\n",
               "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>ARIZONA</th>\n",
+              "      <th>3</th>\n",
+              "      <td>ARIZONA</td>\n",
               "      <td>154201200.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>ARKANSAS</th>\n",
+              "      <th>4</th>\n",
+              "      <td>ARKANSAS</td>\n",
               "      <td>72299100.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>VIRGINIA</th>\n",
-              "      <td>7510250.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>WASHINGTON</th>\n",
-              "      <td>12839030.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>WEST VIRGINIA</th>\n",
-              "      <td>9586250.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>WISCONSIN</th>\n",
-              "      <td>47620600.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>WYOMING</th>\n",
-              "      <td>18609000.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>65 rows × 1 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "                DAMAGE_PROPERTY\n",
-              "STATE                          \n",
-              "ALABAMA               8394450.0\n",
-              "ALASKA               30415600.0\n",
-              "AMERICAN SAMOA              0.0\n",
-              "ARIZONA             154201200.0\n",
-              "ARKANSAS             72299100.0\n",
-              "...                         ...\n",
-              "VIRGINIA              7510250.0\n",
-              "WASHINGTON           12839030.0\n",
-              "WEST VIRGINIA         9586250.0\n",
-              "WISCONSIN            47620600.0\n",
-              "WYOMING              18609000.0\n",
-              "\n",
-              "[65 rows x 1 columns]"
+              "            STATE  DAMAGE_PROPERTY\n",
+              "0         ALABAMA        8394450.0\n",
+              "1          ALASKA       30415600.0\n",
+              "2  AMERICAN SAMOA              0.0\n",
+              "3         ARIZONA      154201200.0\n",
+              "4        ARKANSAS       72299100.0"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 236
+          "execution_count": 248
         }
       ]
     },
